@@ -1,6 +1,5 @@
 package me.usainsrht.ujobs.managers;
 
-import com.mojang.brigadier.Message;
 import me.usainsrht.ujobs.UJobsPlugin;
 import me.usainsrht.ujobs.models.Job;
 import me.usainsrht.ujobs.models.PlayerLeaderboardData;
@@ -11,8 +10,8 @@ import net.kyori.adventure.text.minimessage.tag.resolver.Placeholder;
 import net.kyori.adventure.text.minimessage.tag.resolver.TagResolver;
 import org.bukkit.Bukkit;
 import org.bukkit.OfflinePlayer;
+import org.bukkit.configuration.ConfigurationSection;
 import org.bukkit.configuration.file.YamlConfiguration;
-import org.bukkit.entity.Player;
 
 import java.util.*;
 
@@ -20,12 +19,57 @@ public class LeaderboardManager {
 
     UJobsPlugin plugin;
     Map<UUID, PlayerLeaderboardData> leaderboardPlayerCache;
-    Map<Job, List<UUID>> leaderboardJobCache;
+    Map<Job, UUID[]> leaderboardJobCache;
 
     public LeaderboardManager(UJobsPlugin plugin) {
         this.plugin = plugin;
         this.leaderboardPlayerCache = new HashMap<>();
         this.leaderboardJobCache = new HashMap<>();
+
+        for (Job job : plugin.getJobManager().getJobs().values()) {
+            leaderboardJobCache.put(job, new UUID[100]);
+        }
+    }
+
+    public void load(ConfigurationSection yml) {
+        ConfigurationSection leaderboardSection = yml.getConfigurationSection("leaderboard");
+        if (leaderboardSection == null) return;
+        leaderboardSection.getKeys(false).forEach(jobId -> {
+            Job job = plugin.getJobManager().getJobs().get(jobId);
+            if (job == null) return;
+
+            ConfigurationSection jobSection = yml.getConfigurationSection("leaderboard." + jobId);
+            if (jobSection == null) return;
+
+            jobSection.getKeys(false).forEach(uuidString -> {
+                UUID uuid = UUID.fromString(uuidString);
+                int position = jobSection.getInt(uuidString + ".position", -1);
+                int level = jobSection.getInt(uuidString + ".level", -1);
+
+                if (position < 0 || level < 0) return;
+
+                PlayerLeaderboardData playerData = leaderboardPlayerCache.computeIfAbsent(uuid, PlayerLeaderboardData::new);
+                playerData.getLeaderboardStats().put(job, new PlayerLeaderboardData.LeaderboardStats(position, level));
+
+                leaderboardJobCache.get(job)[position] = uuid;
+            });
+        });
+    }
+
+    public void save() {
+        YamlConfiguration leaderboardConfig = plugin.getConfigManager().getLeaderboardConfig();
+
+        leaderboardConfig.set("leaderboard", null); // Clear existing leaderboard data
+
+        leaderboardPlayerCache.forEach(((uuid, playerLeaderboardData) -> {
+            playerLeaderboardData.getLeaderboardStats().forEach((job, stats) -> {
+                String path = "leaderboard." + job.getId() + "." + uuid.toString();
+                leaderboardConfig.set(path + ".position", stats.getPosition());
+                leaderboardConfig.set(path + ".level", stats.getLevel());
+            });
+        }));
+
+        plugin.getConfigManager().saveLeaderboard();
     }
 
     public int getPosition(UUID uuid, Job job) {
@@ -35,13 +79,12 @@ public class LeaderboardManager {
     }
 
     public UUID getPlayerByPosition(int position, Job job) {
-        List<UUID> leaderboard = leaderboardJobCache.get(job);
-        if (leaderboard == null || position < 0 || position >= leaderboard.size()) return null;
-        return leaderboard.get(position);
+        UUID[] leaderboard = leaderboardJobCache.get(job);
+        if (leaderboard == null || position < 0 || position >= leaderboard.length) return null;
+        return leaderboard[position];
     }
 
     public void checkLeaderboardChange(UUID uuid, Job job, int level) {
-        YamlConfiguration leaderboardConfig = plugin.getConfigManager().getLeaderboardConfig();
         int position = getPosition(uuid, job);
         if (position == -1) return;
 
@@ -51,6 +94,14 @@ public class LeaderboardManager {
 
         int opponentLevel = leaderboardPlayerCache.get(opponent).getLeaderboardStats().get(job).getLevel();
         if (level > opponentLevel) {
+
+            leaderboardPlayerCache.get(uuid).getLeaderboardStats().get(job).setPosition(oneHigher);
+            leaderboardPlayerCache.get(uuid).getLeaderboardStats().get(job).setLevel(level);
+
+            leaderboardPlayerCache.get(opponent).getLeaderboardStats().get(job).setPosition(position);
+
+            leaderboardJobCache.get(job)[oneHigher] = uuid;
+            leaderboardJobCache.get(job)[position] = opponent;
 
             // Prepare placeholders and messages
             OfflinePlayer opponentPlayer = Bukkit.getOfflinePlayer(opponent);
@@ -64,47 +115,21 @@ public class LeaderboardManager {
             placeholderSet.add(Formatter.number("level", level));
             placeholderSet.add(Formatter.number("position", oneHigher));
             placeholderSet.add(Placeholder.component("job", job.getName()));
-
-            // Colors
-            String primaryColor = children != null && !children.isEmpty() ? plugin.getColor(children.get(0)) : "";
-            String secondaryColor = children != null && !children.isEmpty() ? plugin.getColor(children.get(children.size() - 1)) : "";
-            placeholderSet.add("primary", "<" + primaryColor + ">");
-            placeholderSet.add("secondary", "<" + secondaryColor + ">");
+            placeholderSet.add(Placeholder.styling("primary", job.getName().children().getFirst().color()));
+            placeholderSet.add(Placeholder.styling("secondary", job.getName().children().getLast().color()));
 
             TagResolver[] placeholders = placeholderSet.toArray(new TagResolver[]{});
 
-            String message = plugin.getJobsConfig().getString("messages.leaderboard.take_someones_position");
-            Component component = plugin.deserializeMessage(message, placeholders);
-            if (player.isOnline()) {
-                ((Player) player).sendMessage(component);
-                plugin.playSound((Player) player, plugin.getJobsConfig().getString("sounds.leaderboard.take_someones_position"));
-            }
-
-            if (opponentPlayer.isOnline()) {
-                MessageUtil.send(opponentPlayer, plugin.getConfigManager().getMessage("leaderboard.your_position_taken"), placeholders);
-            }
+            if (player.isOnline()) MessageUtil.send(player.getPlayer(), plugin.getConfigManager().getMessage("messages.leaderboard.take_someones_position"), placeholders);
+            if (opponentPlayer.isOnline()) MessageUtil.send(opponentPlayer.getPlayer(), plugin.getConfigManager().getMessage("leaderboard.your_position_taken"), placeholders);
 
             if (oneHigher == 1) {
-                String leadMsg = plugin.getJobsConfig().getString("messages.leaderboard.take_lead");
-                isimEki = plugin.getSuffix(opponent, "den");
-                opponentDisplayName = plugin.getDisplayName(opponentPlayer) + "'" + isimEki;
-                placeholders.put("opponentdisplayname", opponentDisplayName);
-                placeholders.put("opponentname", opponent + "'" + isimEki);
-                Component leadComponent = plugin.deserializeMessage(leadMsg, placeholders)
-                        .append(plugin.getTebrikButton(player));
-                Bukkit.broadcast(leadComponent);
-                if (opponentPlayer.isOnline()) {
-                    plugin.playSound((Player) opponentPlayer, plugin.getJobsConfig().getString("sounds.leaderboard.take_lead"));
-                }
+                MessageUtil.send(plugin.getServer(), plugin.getConfigManager().getMessage("messages.leaderboard.take_lead"), placeholders);
             } else if (oneHigher == 10) {
-                String top10Msg = plugin.getJobsConfig().getString("messages.leaderboard.get_in_top_10");
-                Component top10Component = plugin.deserializeMessage(top10Msg, placeholders)
-                        .append(plugin.getTebrikButton(player));
-                Bukkit.broadcast(top10Component);
-                if (opponentPlayer.isOnline()) {
-                    plugin.playSound((Player) opponentPlayer, plugin.getJobsConfig().getString("sounds.leaderboard.get_in_top_10"));
-                }
+                MessageUtil.send(plugin.getServer(), plugin.getConfigManager().getMessage("messages.leaderboard.get_in_top_10"), placeholders);
             }
+
+            save();
         }
     }
 }
